# feynumeric

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
electron_muon/: CMakeLists.txt  main.cpp
electron_muon/include/: particles.hpp  vertices.hpp
electron_muon/source/: particles.cpp  vertices.cpp
include/feyncalc/: angular_momentum.hpp  complex.hpp  diagram.hpp  dirac.hpp  edge.hpp  function_types.hpp  graph.hpp  integrate.hpp  kinematics.hpp  lorentz_index.hpp  matrix.hpp  messages.hpp  momentum.hpp  particle.hpp  process.hpp  range.hpp  table.hpp  topologies.cpp  topologies.hpp  topology.hpp  units.hpp  utility.hpp  vertex.hpp  vertex_manager.hpp
include/feynumeric/: amplitude.hpp  angular_momentum.hpp  boost.hpp  command_line_manager.hpp  complex.hpp  constants.hpp  constexpr_math.cpp  constexpr_math.hpp  contract.hpp  core.hpp  diagram.hpp  dirac.hpp  direction.hpp  edge.hpp  edge_direction.hpp  edge_manager.hpp  feynman_diagram.cpp  feynman_diagram.hpp  feynman_graph.hpp  feynman_process.hpp  feynman_rule.hpp  feynumeric.hpp  format.hpp  four_vector.cpp  four_vector.hpp  function_types.hpp  functions.hpp  graph.hpp  graph_edge.hpp  graph_vertex.hpp  integrate.hpp  isospin.hpp  kinematics.hpp  lorentz_index.hpp  lorentz_transformation.hpp  matrix.hpp  messages.hpp  momentum.hpp  particle.hpp  particle_direction.hpp  (+21 more)
photo_production/: CMakeLists.txt  amplitude.cpp  amplitude2D  amplitude2D.cpp  coupling_constants.cpp  cross_sections.cpp  decay_widths.cpp  decay_widths2.cpp  dyson_factors.cpp  fit_params.txt  fit_params2.txt  gradient_descent.cpp  gradient_descent_differential.cpp  main.cpp  photoprod.cpp  playground.cpp  run_script.bat
photo_production/data/: coupling_constants.txt  coupling_constants_isospin_symmetry.txt  coupling_constants_isospin_symmetry_100%.txt  experimental_data_pi_p_elastic.txt  particles.txt  particles_deniz.txt  particles_isospin_symmetry.txt  particles_isospin_symmetry_100%.txt  particles_isospin_symmetry_100%_backup.txt  particles_miklos.txt
photo_production/data/dyson_factors/: D1232.txt  D1232_breit_wigner.txt  D1232_none.txt  D1600_breit_wigner.txt  D1600_none.txt  D1620_breit_wigner.txt  D1620_none.txt  D1700_breit_wigner.txt  D1700_none.txt  D1900_breit_wigner.txt  D1905_breit_wigner.txt  D1910_breit_wigner.txt  D1920_breit_wigner.txt  D1930_breit_wigner.txt  D1940_breit_wigner.txt  D1950_breit_wigner.txt  N1440.txt  N1520.txt  N1535.txt
photo_production/data/polynomials/: polynomial_decay_D1232pp_0_3.txt  polynomial_decay_D1600pp_0_6.txt  polynomial_decay_D1620pp_0_3.txt  polynomial_decay_D1700pp_0_3.txt  polynomial_decay_D1700pp_0_6.txt  polynomial_decay_D1750pp_0_0.txt  polynomial_decay_D1750pp_0_3.txt  polynomial_decay_D1900pp_0_0.txt  polynomial_decay_D1905pp_0_3.txt  polynomial_decay_D1905pp_0_4.txt  polynomial_decay_D1905pp_0_9.txt  polynomial_decay_D1910pp_0_0.txt  polynomial_decay_D1910pp_0_3.txt  polynomial_decay_D1920pp_0_3.txt  polynomial_decay_D1930pp_0_4.txt  polynomial_decay_D1940pp_0_3.txt  polynomial_decay_D1940pp_0_6.txt  polynomial_decay_D1950pp_0_1.txt  polynomial_decay_D1950pp_0_12.txt  polynomial_decay_D1950pp_0_14.txt  polynomial_decay_D1950pp_0_7.txt  polynomial_scattering_D1232pp_0_0.txt  polynomial_scattering_D1232pp_0_1.txt  polynomial_scattering_D1232pp_0_2.txt  polynomial_scattering_D1232pp_0_3.txt  polynomial_scattering_D1232pp_1_0.txt  polynomial_scattering_D1232pp_1_1.txt  polynomial_scattering_D1232pp_1_2.txt  polynomial_scattering_D1232pp_1_3.txt  polynomial_scattering_D1600pp_0_0.txt  polynomial_scattering_D1600pp_0_1.txt  polynomial_scattering_D1600pp_0_2.txt  polynomial_scattering_D1600pp_0_3.txt  polynomial_scattering_D1600pp_1_0.txt  polynomial_scattering_D1600pp_1_1.txt  polynomial_scattering_D1600pp_1_2.txt  polynomial_scattering_D1620pp_0_1.txt  polynomial_scattering_D1620pp_0_2.txt  polynomial_scattering_D1620pp_0_3.txt  polynomial_scattering_D1620pp_1_0.txt  (+85 more)
photo_production/include/: coupling_constants.hpp  couplings.hpp  effective_lagrangian_model.hpp  form_factors.hpp  particles.hpp  write_map.hpp
photo_production/source/: couplings.cpp  effective_lagrangian_model.cpp  form_factors.cpp  particles.cpp  write_map.cpp
source/: amplitude.cpp  angular_momentum.cpp  boost.cpp  command_line_manager.cpp  constexpr_math.cpp  diagram.cpp  dirac.cpp  edge.cpp  edge_manager.cpp  feynman_diagram.cpp  feynman_graph.cpp  feynman_process.cpp  feynman_rule.cpp  four_vector.cpp  graph.cpp  graph_edge.cpp  graph_vertex.cpp  integrate.cpp  isospin.cpp  kinematics.cpp  lorentz_index.cpp  lorentz_transformation.cpp  matrix.cpp  messages.cpp  momentum.cpp  particle.cpp  particle_direction.cpp  particle_manager.cpp  particles.cpp  phase_space.cpp  polynomial.cpp  process.cpp  qed.cpp  range.cpp  table.cpp  three_vector.cpp  timer.cpp  topologies.cpp  topology.cpp  utility.cpp  (+2 more)
tests/: CMakeLists.txt  gradient_descent.cpp  main.cpp
tests/include/: effective_lagrangian_model.hpp
tests/source/: particles.cpp  test_angular_momentum.cpp
